--- a/src/pages/fillers.njk
+++ b/src/pages/fillers.njk
@@ -5,61 +5,73 @@ layout: "layouts/base.html"
 ---
 
 <div class="">
-	<div class="container relative z-20 pb-28 pt-48 md:pb-24 md:pt-60">
-		<div class="xl:px-20 2xl:px-40">
-			<div class="flex flex-col gap-10 md:gap-14 pb-14 md:pb-24 xl:flex-row xl:gap-11">
-				<div class="w-full xl:w-2/5 2xl:w-1/2">
-					<span class="flex items-baseline">
-						<span>
-							<h3 class="text-h-4 md:text-h-3 xl:text-h-2 font-bold text-black">Fillers</h3>
+	<div class="relative">
+		<div class="absolute -bottom-3 left-0 z-20 w-[125%] sm:w-auto md:-bottom-6">
+			<img
+				src="/assets/img/section-shape-pink.svg" class="transform -scale-x-100"
+				alt="shape image"
+			/>
+		</div>
+		<div class="container relative z-20 pt-48 md:pt-60">
+			<div class="xl:px-20 2xl:px-40">
+				<div class="flex flex-col gap-10 md:gap-14 pb-14 md:pb-32 xl:flex-row xl:gap-11">
+					<div class="w-full xl:w-2/5 2xl:w-1/2">
+						<span class="flex items-baseline">
+							<span>
+								<h3 class="text-h-4 md:text-h-3 xl:text-h-2 font-bold text-black">Fillers</h3>
+							</span>
+							<span class="block pb-4">
+								<img
+									src="/assets/img/icon-green-stars.png"
+									class="h-[60px]"
+									alt="icon stars"
+								/>
+							</span>
 						</span>
-						<span class="block pb-4">
-							<img
-								src="/assets/img/icon-green-stars.png"
-								class="h-[60px]"
-								alt="icon stars"
-							/>
-						</span>
-					</span>
-					<div class="pt-4 md:pt-7">
-						<p class="text-h-5 text-black">
-							Een filler is een effectief middel om plooien en rimpels op te vullen. Bij FillerHouse werken wij uitsluitend met oplosbare tijdelijke fillers op basis van hyaluronzuur. Er zijn verschillende soorten fillers, die elk hun specifieke eigenschappen hebben voor bijvoorbeeld diepere groeven, fijne lijntjes of volumeverlies. De duur van het effect hangt af van het product en het te behandelen gebied. FillerHouse werkt uitsluitend met A-merken, zoals Stylage en Teosyal.
-						</p>
+						<div class="pt-4 md:pt-7">
+							<p class="text-h-5 text-black">
+								Een filler is een effectief middel om plooien en rimpels op te vullen. Bij FillerHouse werken wij uitsluitend met oplosbare tijdelijke fillers op basis van hyaluronzuur. Er zijn verschillende soorten fillers, die elk hun specifieke eigenschappen hebben voor bijvoorbeeld diepere groeven, fijne lijntjes of volumeverlies. De duur van het effect hangt af van het product en het te behandelen gebied. FillerHouse werkt uitsluitend met A-merken, zoals Stylage en Teosyal.
+							</p>
+						</div>
+						<div class="mt-10 md:mt-8">
+							<a
+								href="/"
+								class="btn btn-primary text-center md:!px-10"
+								>Plan jouw afspraak online</a
+							>
+						</div>
 					</div>
-					<div class="mt-10 md:mt-8">
-						<a
-							href="/"
-							class="btn btn-primary text-center md:!px-10"
-							>Plan jouw afspraak online</a
-						>
-					</div>
-				</div>
-				<div class="flex w-full gap-3 md:w-[96%] md:gap-8 lg:gap-[51px] xl:w-[55%] 2xl:w-1/2">
-					<span class="w-1/2">
-						<img
-							src="/assets/img/services-16.jpg"
-							class="effect-3d-image h-[235px] w-full rounded-[15px] object-cover sm:h-[300px] md:rounded-[25px] lg:h-[436px]"
-							alt="image"
-						/>
-					</span>
-					<span class="w-1/2">
-						<span class="block pt-5 md:pt-[53px]">
+					<div class="flex w-full gap-3 md:w-[96%] md:gap-8 lg:gap-[51px] xl:w-[55%] 2xl:w-1/2">
+						<span class="w-1/2">
 							<img
-								src="/assets/img/services-1.jpg"
+								src="/assets/img/services-16.jpg"
 								class="effect-3d-image h-[235px] w-full rounded-[15px] object-cover sm:h-[300px] md:rounded-[25px] lg:h-[436px]"
 								alt="image"
 							/>
 						</span>
-					</span>
+						<span class="w-1/2">
+							<span class="block pt-5 md:pt-[53px]">
+								<img
+									src="/assets/img/services-1.jpg"
+									class="effect-3d-image h-[235px] w-full rounded-[15px] object-cover sm:h-[300px] md:rounded-[25px] lg:h-[436px]"
+									alt="image"
+								/>
+							</span>
+						</span>
+					</div>
 				</div>
 			</div>
-			<div class="bg-off-white">
-				<div class="w-full xl:w-2/3 2xl:w-[57%] mx-auto text-center pb-12 xl:pb-[70px]">
-					<span class="flex justify-center items-baseline">
+		</div>
+	</div>
+	<div class="bg-pink-medium">
+		<div class="container relative pt-7 md:pt-10 pb-16 md:pb-[286px]">
+			<div class="xl:px-20 2xl:px-40">
+				<div>
+					<span class="flex items-baseline">
 						<span>
-							<h3 class="text-[32px] lg:text-h-3 font-bold text-black">Filler pakketten</h3>
+							<h3 class="text-[32px]/[38px] lg:text-h-3 font-bold text-white">Wanneer heb ik fillers nodig?</h3>
 						</span>
-						<span class="block pb-4">
+						<span class="block pb-4 shrink-0">
 							<img
 								src="/assets/img/icon-green-stars.png"
 								class="h-[60px]"
@@ -68,86 +80,87 @@ layout: "layouts/base.html"
 						</span>
 					</span>
 					<div class="pt-4">
-						<p class="text-h-5 text-black">
-							Bij FillerHouse bieden we ook filler pakketten aan. Dit is ideaal, omdat je dan betaalt voor het aantal ml aan fillers en je zelf kan bepalen hoe de milliliters verspreid worden over je gezicht. Daarnaast hebben we ook de <span class="text-pink font-bold italic">Diamond, Platinum en Gold</span> pakketten, voor een kleine make-over waarmee je zeker de show zal stelen. Voor de mannen hebben we het <span class="text-pink font-bold italic">Mister Perfect pakket</span>.
+						<p class="text-h-5 text-white">
+							Een kleine ingreep voor een mooie, frisse uitstraling. <br/> Fillers zijn stoffen die geïnjecteerd worden in de huid voor <span class="text-lime font-bold italic">herstel en verjonging</span> van de huid. Ze worden ingezet bij de volgende behandelingen:
 						</p>
 					</div>
-					<div class="mt-10 md:mt-8 flex justify-center">
-						<a
-							href="/"
-							class="btn btn-primary text-center md:!px-10"
-							>Plan jouw afspraak online</a
-						>
+					<ul class="flex flex-wrap gap-2 xl:gap-8 justify-between pt-5">
+						<li class="text-white text-h-5 flex gap-3 md:items-center">
+							<span class="block shrink-0 pt-1.5 md:pt-0">
+								<img src="/assets/img/icon-check-green.png" class="h-[22px]" alt="icon check green">
+							</span>
+							Vullen van rimpels en oneffenheden
+						</li>
+						<li class="text-white text-h-5 flex gap-3 md:items-center">
+							<span class="block shrink-0 pt-1.5 md:pt-0">
+								<img src="/assets/img/icon-check-green.png" class="h-[22px]" alt="icon check green">
+							</span>
+							Volumeherstel van het gezicht
+						</li>
+						<li class="text-white text-h-5 flex gap-3 md:items-center">
+							<span class="block shrink-0 pt-1.5 md:pt-0">
+								<img src="/assets/img/icon-check-green.png" class="h-[22px]" alt="icon check green">
+							</span>
+							Volume & contour van de lippen aanpassen
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="bg-off-white pb-12 xl:pb-[70px] relative">
+		<div class="absolute -top-3 -left-[28rem] z-20 w-[125%] sm:w-auto md:-top-6">
+			<img
+				src="/assets/img/section-shape-pink.svg" class="transform rotate-180"
+				alt="shape image"
+			/>
+		</div>
+	</div>
+	<div class="relative z-50 -mt-[19rem] lg:-mt-80">
+		<div class="container ">
+			<div class="xl:px-20 2xl:px-40">
+				<div class="bg-white lg:p-[50px] lg:pr-[70px] lg:pb-[70px] rounded-[50px] shadow-[5px_5px_25px_rgba(240,186,212,0.18)] flex flex-col-reverse lg:flex-row gap-16 2xl:gap-32 items-center">
+					<div class="2xl:pl-10 lg:w-3/5">
+						<h3 class="text-[32px]/[38px] xl:text-h-3 font-bold text-black">Wanneer heb ik fillers nodig?</h3>
+						<p class="text-h-5 text-black pt-7 xl:pt-2">
+							Tijdens het intakegesprek bespreken we jouw wensen, waarna
+							de specialist een persoonlijk behandelplan opstelt.
+							Door combinatiebehandelingen met de verschillende hyaluronzuren
+							en botox wordt gestreefd naar een mooi en natuurlijk resultaat.
+							Het effect van een fillerbehandeling is direct zichtbaar en houdt minimaal 9 tot 12 maanden aan.
+						</p>
+						<span class="text-pink text-h-5 font-bold italic block pt-7">FillerHouse staat bekend om haar prachtige resultaten en vele tevreden klanten met lip fillers. </span>
+					</div>
+					<div class="w-full lg:w-2/5">
+						<img src="/assets/img/services-01.jpg" class="rounded-[20px] effect-3d-image-small h-[378px] object-cover w-full" alt="image">
 					</div>
 				</div>
-				<div class="pb-12 xl:pb-[100px] flex flex-col lg:flex-row gap-3 md:gap-5">
-					<div
-						class="flex w-full flex-col-reverse gap-[18px] md:gap-5 lg:flex-row">
-						<span class="w-full xl:pt-2 lg:w-1/2 lg:pt-5">
-							<img
-								src="/assets/img/services-1.jpg"
-								class="h-[162px] w-full rounded-[15px] object-cover sm:h-[275px] md:h-[360px] md:rounded-[50px] 2xl:h-[403px]"
-								alt="image"
-							/>
+			</div>
+		</div>
+	</div>
+	<div>
+		<div class="bg-off-white pt-[650px] lg:pt-64 xl:pt-72 -mt-[600px] lg:-mt-[200px]">
+			<div class="container">
+				<div class="xl:px-20 2xl:px-40">
+					<div class="w-full xl:w-2/3 2xl:w-[57%] mx-auto text-center pb-12 xl:pb-[70px]">
+						<span class="flex justify-center items-baseline">
+							<span>
+								<h3 class="text-[32px] lg:text-h-3 font-bold text-black">Filler pakketten</h3>
+							</span>
+							<span class="block pb-4">
+								<img
+									src="/assets/img/icon-green-stars.png"
+									class="h-[60px]"
+									alt="icon stars"
+								/>
+							</span>
 						</span>
-						<div class="flex w-full flex-row items-end gap-2.5 lg:w-1/2 lg:flex-col lg:gap-0">
-							<span class="block w-1/2 lg:w-full">
-								<img
-									src="/assets/img/services-6.jpg"
-									class="h-[146px] w-full rounded-[15px] object-cover sm:h-[239px] md:rounded-[50px] 2xl:h-[183px]"
-									alt="image"
-								/>
-							</span>
-							<span class="block w-1/2 lg:pt-6 lg:w-full">
-								<img
-									src="/assets/img/services-3.jpg"
-									class="h-[146px] w-full rounded-[15px] object-cover sm:h-[239px] md:rounded-[50px] lg:h-[239px] 2xl:h-[268px]"
-									alt="image"
-								/>
-							</span>
+						<div class="pt-4">
+							<p class="text-h-5 text-black">
+								Bij FillerHouse bieden we ook filler pakketten aan. Dit is ideaal, omdat je dan betaalt voor het aantal ml aan fillers en je zelf kan bepalen hoe de milliliters verspreid worden over je gezicht. Daarnaast hebben we ook de <span class="text-pink font-bold italic">Diamond, Platinum en Gold</span> pakketten, voor een kleine make-over waarmee je zeker de show zal stelen. Voor de mannen hebben we het <span class="text-pink font-bold italic">Mister Perfect pakket</span>.
+							</p>
 						</div>
-					</div>
-					<div
-						class="flex w-full flex-col-reverse gap-[18px] lg:flex-row lg:gap-5">
-						<span class="w-full xl:pt-2 lg:w-1/2 lg:pt-5">
-							<img
-								src="/assets/img/services-1.jpg"
-								class="h-[162px] w-full rounded-[15px] object-cover sm:h-[275px] md:h-[360px] md:rounded-[50px] 2xl:h-[403px]"
-								alt="image"
-							/>
-						</span>
-						<div class="flex w-full flex-row items-end gap-2.5 lg:w-1/2 lg:flex-col lg:gap-0">
-							<span class="block w-1/2 lg:w-full">
-								<img
-									src="/assets/img/services-6.jpg"
-									class="h-[146px] w-full rounded-[15px] object-cover sm:h-[239px] md:rounded-[50px] 2xl:h-[183px]"
-									alt="image"
-								/>
-							</span>
-							<span class="block w-1/2 xl:pt-6 lg:w-full">
-								<img
-									src="/assets/img/services-3.jpg"
-									class="h-[146px] w-full rounded-[15px] object-cover sm:h-[239px] md:rounded-[50px] lg:h-[239px] 2xl:h-[268px]"
-									alt="image"
-								/>
-							</span>
-						</div>
-					</div>
-				</div>
-				<div class="flex flex-col gap-12 md:gap-9 xl:flex-row pb-12 md:pb-[70px]">
-					<div class="xl:w-1/2">
-						<h3 class="lg:text-4xl text-[32px] font-bold text-black leading-tight">Oplossen of verwijderen fillers </h3>
-						<p class="text-h-5 pt-4 lg:pt-8">
-							Wanneer het effect van een filler behandeling niet naar wens is, kun je de filler laten verwijderen met hyaluronidase. Dit is een enzym dat de fillers als het ware laat oplossen en deze door het lichaam kan worden afgevoerd. Het effect hiervan is vaak direct al zichtbaar en soms binnen enkele dagen.
-							<span class="text-pink font-bold italic">Het oplossen van fillers kan vanaf € 100,-.</span>
-						</p>
-					</div>
-					<div class="xl:w-1/2">
-						<h3 class="lg:text-4xl text-[32px] font-bold text-black leading-tight">Profhilo anti-aging behandeling</h3>
-						<p class="text-h-5 pt-4 lg:pt-8">
-							Zorg voor een strakke huid met een Profhilo anti-aging behandeling die rimpels van binnenuit helpt genezen.
-						</p>
-						<div class="mt-6">
+						<div class="mt-10 md:mt-8 flex justify-center">
 							<a
 								href="/"
 								class="btn btn-primary text-center md:!px-10"
@@ -155,9 +168,89 @@ layout: "layouts/base.html"
 							>
 						</div>
 					</div>
+					<div class="pb-12 xl:pb-[100px] flex flex-col lg:flex-row gap-3 md:gap-5">
+						<div
+							class="flex w-full flex-col-reverse gap-[18px] md:gap-5 lg:flex-row">
+							<span class="w-full xl:pt-2 lg:w-1/2 lg:pt-5">
+								<img
+									src="/assets/img/services-1.jpg"
+									class="h-[162px] w-full rounded-[15px] object-cover sm:h-[275px] md:h-[360px] md:rounded-[50px] 2xl:h-[403px]"
+									alt="image"
+								/>
+							</span>
+							<div class="flex w-full flex-row items-end gap-2.5 lg:w-1/2 lg:flex-col lg:gap-0">
+								<span class="block w-1/2 lg:w-full">
+									<img
+										src="/assets/img/services-6.jpg"
+										class="h-[146px] w-full rounded-[15px] object-cover sm:h-[239px] md:rounded-[50px] 2xl:h-[183px]"
+										alt="image"
+									/>
+								</span>
+								<span class="block w-1/2 lg:pt-6 lg:w-full">
+									<img
+										src="/assets/img/services-3.jpg"
+										class="h-[146px] w-full rounded-[15px] object-cover sm:h-[239px] md:rounded-[50px] lg:h-[239px] 2xl:h-[268px]"
+										alt="image"
+									/>
+								</span>
+							</div>
+						</div>
+						<div
+							class="flex w-full flex-col-reverse gap-[18px] lg:flex-row lg:gap-5">
+							<span class="w-full xl:pt-2 lg:w-1/2 lg:pt-5">
+								<img
+									src="/assets/img/services-1.jpg"
+									class="h-[162px] w-full rounded-[15px] object-cover sm:h-[275px] md:h-[360px] md:rounded-[50px] 2xl:h-[403px]"
+									alt="image"
+								/>
+							</span>
+							<div class="flex w-full flex-row items-end gap-2.5 lg:w-1/2 lg:flex-col lg:gap-0">
+								<span class="block w-1/2 lg:w-full">
+									<img
+										src="/assets/img/services-6.jpg"
+										class="h-[146px] w-full rounded-[15px] object-cover sm:h-[239px] md:rounded-[50px] 2xl:h-[183px]"
+										alt="image"
+									/>
+								</span>
+								<span class="block w-1/2 xl:pt-6 lg:w-full">
+									<img
+										src="/assets/img/services-3.jpg"
+										class="h-[146px] w-full rounded-[15px] object-cover sm:h-[239px] md:rounded-[50px] lg:h-[239px] 2xl:h-[268px]"
+										alt="image"
+									/>
+								</span>
+							</div>
+						</div>
+					</div>
+					<div class="flex flex-col gap-12 md:gap-9 xl:flex-row pb-12 md:pb-[70px]">
+						<div class="xl:w-1/2">
+							<h3 class="lg:text-4xl text-[32px] font-bold text-black leading-tight">Oplossen of verwijderen fillers </h3>
+							<p class="text-h-5 pt-4 lg:pt-8">
+								Wanneer het effect van een filler behandeling niet naar wens is, kun je de filler laten verwijderen met hyaluronidase. Dit is een enzym dat de fillers als het ware laat oplossen en deze door het lichaam kan worden afgevoerd. Het effect hiervan is vaak direct al zichtbaar en soms binnen enkele dagen.
+								<span class="text-pink font-bold italic">Het oplossen van fillers kan vanaf € 100,-.</span>
+							</p>
+						</div>
+						<div class="xl:w-1/2">
+							<h3 class="lg:text-4xl text-[32px] font-bold text-black leading-tight">Profhilo anti-aging behandeling</h3>
+							<p class="text-h-5 pt-4 lg:pt-8">
+								Zorg voor een strakke huid met een Profhilo anti-aging behandeling die rimpels van binnenuit helpt genezen.
+							</p>
+							<div class="mt-6">
+								<a
+									href="/"
+									class="btn btn-primary text-center md:!px-10"
+									>Plan jouw afspraak online</a
+								>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
-			<div class="md:effect-top-curve relative overflow-hidden bg-white pt-[100px] md:pt-16">
+		</div>
+	</div>
+	<div class="container pb-[86px] md:pb-[100px]">
+		<div class="md:effect-top-curve relative overflow-hidden bg-white pt-[100px] md:pt-16">
+			<div class="xl:px-20 2xl:px-40">
 				<div class="max-w-[872px] mx-auto pb-12 md:pb-[76px]">
 					<div class="lg:w-4/5 mx-auto md:text-center pb-[76px]">
 						<h3 class="text-[32px] leading-tight lg:text-4xl/[64px] font-bold text-black md:text-center">Niet gevonden wat je zocht?</h3>
@@ -229,6 +322,8 @@ layout: "layouts/base.html"
 					</div>
 				</div>
 			</div>
+		</div>
+		<div class="xl:px-20 2xl:px-40">
 			<div class="max-w-[872px] mx-auto pb-12 md:pb-[76px]">
 				<h3 class="text-[32px] lg:text-4xl/[64px] font-bold text-black md:text-center">Prijslijst</h3>
 				<div class="flex justify-between gap-8 items-center border-b border-solid border-[#f4f4f4] pb-[18px] md:pb-4 pt-9">
@@ -371,7 +466,7 @@ layout: "layouts/base.html"
 					</table>
 				</div>
 			</div>
-			<div class="max-w-[872px] mx-auto pb-12 md:pb-[76px]">
+			<div class="max-w-[872px] mx-auto">
 				<h3 class="text-[32px] lg:text-4xl/[64px] font-bold text-black md:text-center">FaQ fillers</h3>
 				<div class="pt-7">
 					<div class="py-2">
