Add part of responsive of filler page

--- a/src/pages/fillers.njk
+++ b/src/pages/fillers.njk
@@ -109,17 +109,17 @@ layout: "layouts/base.html"
 		</div>
 	</div>
 	<div class="bg-off-white pb-12 xl:pb-[70px] relative">
-		<div class="absolute -top-3 -left-[28rem] z-20 w-[125%] sm:w-auto md:-top-6">
+		<div class="hidden lg:block absolute -top-3 -left-[28rem] z-20 w-[125%] sm:w-auto md:-top-6">
 			<img
 				src="/assets/img/section-shape-pink.svg" class="transform rotate-180"
 				alt="shape image"
 			/>
 		</div>
 	</div>
-	<div class="relative z-50 -mt-[19rem] lg:-mt-80">
+	<div class="bg-white lg:bg-transparent relative z-50 -mt-[4rem] md:-mt-[19rem] lg:-mt-80 rounded-t-[25px] lg:rounded-t-0">
 		<div class="container ">
 			<div class="xl:px-20 2xl:px-40">
-				<div class="bg-white lg:p-[50px] lg:pr-[70px] lg:pb-[70px] rounded-[50px] shadow-[5px_5px_25px_rgba(240,186,212,0.18)] flex flex-col-reverse lg:flex-row gap-16 2xl:gap-32 items-center">
+				<div class="bg-white pt-[50px] lg:p-[50px] lg:pr-[70px] lg:pb-[70px] rounded-[50px] lg:shadow-[5px_5px_25px_rgba(240,186,212,0.18)] flex flex-col lg:flex-row gap-12 md:gap-16 2xl:gap-32 items-center">
 					<div class="2xl:pl-10 lg:w-3/5">
 						<h3 class="text-[32px]/[38px] xl:text-h-3 font-bold text-black">Wanneer heb ik fillers nodig?</h3>
 						<p class="text-h-5 text-black pt-7 xl:pt-2">
@@ -132,14 +132,14 @@ layout: "layouts/base.html"
 						<span class="text-pink text-h-5 font-bold italic block pt-7">FillerHouse staat bekend om haar prachtige resultaten en vele tevreden klanten met lip fillers. </span>
 					</div>
 					<div class="w-full lg:w-2/5">
-						<img src="/assets/img/services-01.jpg" class="rounded-[20px] effect-3d-image-small h-[378px] object-cover w-full" alt="image">
+						<img src="/assets/img/services-01.jpg" class="rounded-[20px] effect-3d-image-small h-[302px] md:h-[378px] object-cover w-full" alt="image">
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 	<div>
-		<div class="bg-off-white pt-[650px] lg:pt-64 xl:pt-72 -mt-[600px] lg:-mt-[200px]">
+		<div class="bg-off-white pt-16 md:pt-[650px] lg:pt-64 xl:pt-72 md:-mt-[600px] lg:-mt-[200px]">
 			<div class="container">
 				<div class="xl:px-20 2xl:px-40">
 					<div class="w-full xl:w-2/3 2xl:w-[57%] mx-auto text-center pb-12 xl:pb-[70px]">
