--- a/src/_includes/partials/header.html
+++ b/src/_includes/partials/header.html
@@ -206,7 +206,7 @@
 					<li>
 						<a
 							href="/"
-							class="text-[37px]/[44px] font-bold text-white"
+							class="relative inline-block text-[37px]/[44px] font-bold text-white after:inset-x-0 after:bottom-0 after:block after:h-px after:w-0 after:bg-lime after:transition-all after:duration-300 after:ease-in-out hover:after:w-full"
 						>
 							Home
 						</a>
@@ -214,7 +214,7 @@
 					<li>
 						<a
 							href="/"
-							class="text-[37px]/[44px] font-bold text-white"
+							class="relative inline-block text-[37px]/[44px] font-bold text-white after:inset-x-0 after:bottom-0 after:block after:h-px after:w-0 after:bg-lime after:transition-all after:duration-300 after:ease-in-out hover:after:w-full"
 						>
 							Over ons
 						</a>
@@ -222,7 +222,7 @@
 					<li>
 						<a
 							href="/"
-							class="text-[37px]/[44px] font-bold text-white"
+							class="relative inline-block text-[37px]/[44px] font-bold text-white after:inset-x-0 after:bottom-0 after:block after:h-px after:w-0 after:bg-lime after:transition-all after:duration-300 after:ease-in-out hover:after:w-full"
 						>
 							Behandelingen
 						</a>
@@ -230,7 +230,7 @@
 					<li>
 						<a
 							href="/"
-							class="text-[37px]/[44px] font-bold text-white"
+							class="relative inline-block text-[37px]/[44px] font-bold text-white after:inset-x-0 after:bottom-0 after:block after:h-px after:w-0 after:bg-lime after:transition-all after:duration-300 after:ease-in-out hover:after:w-full"
 						>
 							Prijslijst
 						</a>
@@ -238,7 +238,7 @@
 					<li>
 						<a
 							href="/"
-							class="text-[37px]/[44px] font-bold text-white"
+							class="relative inline-block text-[37px]/[44px] font-bold text-white after:inset-x-0 after:bottom-0 after:block after:h-px after:w-0 after:bg-lime after:transition-all after:duration-300 after:ease-in-out hover:after:w-full"
 						>
 							Nieuws
 						</a>
@@ -246,7 +246,7 @@
 					<li>
 						<a
 							href="/"
-							class="text-[37px]/[44px] font-bold text-white"
+							class="relative inline-block text-[37px]/[44px] font-bold text-white after:inset-x-0 after:bottom-0 after:block after:h-px after:w-0 after:bg-lime after:transition-all after:duration-300 after:ease-in-out hover:after:w-full"
 						>
 							Contact
 						</a>
@@ -256,7 +256,7 @@
 					<li>
 						<a
 							href="/"
-							class="text-xl text-white"
+							class="relative inline-block text-xl text-white after:inset-x-0 after:bottom-0 after:block after:h-px after:w-0 after:bg-lime after:transition-all after:duration-300 after:ease-in-out hover:after:w-full"
 						>
 							Botox
 						</a>
@@ -264,7 +264,7 @@
 					<li>
 						<a
 							href="/"
-							class="text-xl text-white"
+							class="relative inline-block text-xl text-white after:inset-x-0 after:bottom-0 after:block after:h-px after:w-0 after:bg-lime after:transition-all after:duration-300 after:ease-in-out hover:after:w-full"
 						>
 							Fillers
 						</a>
@@ -272,7 +272,7 @@
 					<li>
 						<a
 							href="/"
-							class="text-xl text-white"
+							class="relative inline-block text-xl text-white after:inset-x-0 after:bottom-0 after:block after:h-px after:w-0 after:bg-lime after:transition-all after:duration-300 after:ease-in-out hover:after:w-full"
 						>
 							PDO Draadlift
 						</a>
@@ -280,7 +280,7 @@
 					<li>
 						<a
 							href="/"
-							class="text-xl text-white"
+							class="relative inline-block text-xl text-white after:inset-x-0 after:bottom-0 after:block after:h-px after:w-0 after:bg-lime after:transition-all after:duration-300 after:ease-in-out hover:after:w-full"
 						>
 							Lipo injecties
 						</a>
@@ -288,7 +288,7 @@
 					<li>
 						<a
 							href="/"
-							class="text-xl text-white"
+							class="relative inline-block text-xl text-white after:inset-x-0 after:bottom-0 after:block after:h-px after:w-0 after:bg-lime after:transition-all after:duration-300 after:ease-in-out hover:after:w-full"
 						>
 							PMU
 						</a>
@@ -296,7 +296,7 @@
 					<li>
 						<a
 							href="/"
-							class="text-xl text-white"
+							class="relative inline-block text-xl text-white after:inset-x-0 after:bottom-0 after:block after:h-px after:w-0 after:bg-lime after:transition-all after:duration-300 after:ease-in-out hover:after:w-full"
 						>
 							Peelings
 						</a>
@@ -304,7 +304,7 @@
 					<li>
 						<a
 							href="/"
-							class="text-xl text-white"
+							class="relative inline-block text-xl text-white after:inset-x-0 after:bottom-0 after:block after:h-px after:w-0 after:bg-lime after:transition-all after:duration-300 after:ease-in-out hover:after:w-full"
 						>
 							Brows
 						</a>
@@ -312,7 +312,7 @@
 					<li>
 						<a
 							href="/"
-							class="text-xl text-white"
+							class="relative inline-block text-xl text-white after:inset-x-0 after:bottom-0 after:block after:h-px after:w-0 after:bg-lime after:transition-all after:duration-300 after:ease-in-out hover:after:w-full"
 						>
 							Wimpers
 						</a>
