--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -85,6 +85,10 @@
 		clip-path: ellipse(150% 90% at 50% 90%);
 	}
 
+	.effect-top-curve-subtle {
+		clip-path: ellipse(200% 90% at 50% 90%);
+	}
+
 	.effect-3d-image-small {
 		@apply relative overflow-hidden rounded-[15px];
 		box-shadow: 2.5px 2.5px #c50662, 5px 5px #c50662, 10px 10px #c50662, 15px 15px #c50662;
