--- a/src/_includes/partials/header.html
+++ b/src/_includes/partials/header.html
@@ -19,10 +19,14 @@
 			<div class="hidden lg:block">
 				<button
 					class="btn btn-primary"
-					:class="{ '!effect-3d-button !-translate-x-[15px] !-translate-y-[15px]': $store.desktopMenu.isOpen }"
 					@click="$store.desktopMenu.toggle()"
 				>
-					Menu
+					<span
+						class="btn-content"
+						:class="{ 'active': $store.desktopMenu.isOpen }"
+					>
+						Menu
+					</span>
 				</button>
 			</div>
 		</div>
