--- a/src/pages/fillers.njk
+++ b/src/pages/fillers.njk
@@ -287,7 +287,7 @@ layout: "layouts/base.html"
 			</div>
 		</div>
 	</div>
-	<div class="md:effect-top-curve-subtle -mt-40 bg-white">
+	<div class="effect-top-curve-subtle -mt-40 bg-white">
 		<div class="container pb-[86px] md:pb-[100px]">
 			<div class="relative overflow-hidden bg-white pt-[100px] md:pt-16">
 				<div class="xl:px-20 2xl:px-40">
